WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
81885
[GTK] Fix the only remaining coding style issue in GTK accessibility code
https://bugs.webkit.org/show_bug.cgi?id=81885
Summary
[GTK] Fix the only remaining coding style issue in GTK accessibility code
Mario Sanchez Prada
Reported
2012-03-22 02:55:31 PDT
$ check-webkit-style Source/WebCore/accessibility/gtk/* Source/WebCore/accessibility/gtk/AccessibilityObjectAtk.cpp:22: You should add a blank line after implementation file's own header. [build/include_order] [4] Total errors found: 1 in 32 files We should fix it
Attachments
Patch
(1.25 KB, patch)
2012-03-22 03:02 PDT
,
Mario Sanchez Prada
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mario Sanchez Prada
Comment 1
2012-03-22 03:02:04 PDT
Created
attachment 133211
[details]
Patch
Xan Lopez
Comment 2
2012-03-22 03:05:26 PDT
Comment on
attachment 133211
[details]
Patch r+, live from A Coruña.
WebKit Review Bot
Comment 3
2012-03-22 04:17:51 PDT
Comment on
attachment 133211
[details]
Patch Clearing flags on attachment: 133211 Committed
r111669
: <
http://trac.webkit.org/changeset/111669
>
WebKit Review Bot
Comment 4
2012-03-22 04:17:55 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug