[GTK] Fix the only remaining coding style issue in GTK accessibility code https://bugs.webkit.org/show_bug.cgi?id=81885

Patch by Mario Sanchez Prada <msanchez@igalia.com> on 2012-03-22
Reviewed by Xan Lopez.

Add needed extra line and remove an unneeded one.

* accessibility/gtk/AccessibilityObjectAtk.cpp:

Canonical link: https://commits.webkit.org/99166@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111669 268f45cc-cd09-0410-ab3c-d52691b4dbfc